# My_Own_Projects

My_pushswap/: CMakeLists.txt  Makefile  add_ch.c  additional.c  checker  checker.c  find.c  mix.c  push_swap  push_swap.c  pushswap  sort.c  validation.c
My_pushswap/Printf/: float.c  print_num.c
My_pushswap/checker.dSYM/Contents/Resources/DWARF/: checker
My_pushswap/includes/: ft_printf.h  push_swap.h
My_pushswap/libpushswap.a.dSYM/Contents/: Info.plist
My_pushswap/push_swap.dSYM/Contents/Resources/DWARF/: push_swap
My_pushswap/pushswap.dSYM/Contents/Resources/DWARF/: pushswap
PiscineReload/ex12/: ft_iterative_factorial.c
